# esm_regression

./: .gitignore  pyproject.toml
scripts/: csv2fasta.py  fasta_cluster_to_csv.py  remove_duplicates.py
