[project]
name = "esm-regression"
version = "0.1.0"
description = ""
authors = [
    {name = "ZiChen Yang"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch (>=2.6.0,<3.0.0)",
    "transformers[torch] (>=4.51.2,<5.0.0)",
    "rdkit (>=2024.9.6,<2025.0.0)",
    "accelerate (>=1.6.0,<2.0.0)",
    "peft (>=0.15.1,<0.16.0)",
    "datasets (>=3.5.0,<4.0.0)",
    "deepspeed (>=0.16.5,<0.17.0)",
    "wandb (>=0.19.9,<0.20.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "torchmetrics (>=1.7.1,<2.0.0)",
    "hydra-core (>=1.3.2,<2.0.0)",
    "lmdb (>=1.6.2,<2.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "nvitop (>=1.4.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "mirrors"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
priority = "primary"

[tool.ruff]
line-length = 120
select = [
    "F",
    "E",
    "W",
    "UP",
]
ignore = ["F401"]